# kubejet

./: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts  router.ts  settings.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DeploymentListing.vue  Drawer.vue  DrawerHeader.vue  NamespaceNavigator.vue  NotificationDrawer.vue  NotificationDrawerMessage.vue  PodListing.vue  ScopeNavigator.vue  ScopeNavigatorNamespaceOption.vue  Settings.vue  SettingsTitleBar.vue  Terminal.vue  TerminalManager.vue  WindowTitleBar.vue
src/components/settings/: General.vue
src/services/: Kubernetes.ts
src/stores/: CacheStore.ts  ContextStore.ts  NotificationStore.ts  SettingsStore.ts  TerminalStore.ts
src/themes/: JET.ts
tests/: utils.test.ts
